<resources>
    <string name="app_name">PhysicsSolver</string>

    <string name="kinematics_header">Kinematics Solver</string>
    <string name="action_settings">Settings</string>

    <string name="variableX">X = Change In Distance</string>
    <string name="variableT">t = Time</string>
    <string name="variableA">A = Acceleration</string>
    <string name="variableVf">V<sub>f</sub> = Final Velocity</string>

    <string name="missingVf">X = V<sub>0</sub>*t + 1/2at</string>
    <string name="missingA">X = <mfrac> 1 2 </mfrac>(V<sub>f</sub> + V<sub>0</sub>)t</string>
    <string name="missingT">V<sub>f</sub><sup>2</sup> = V<sub>0</sub><pow>2</pow> + 2aX</string>
    <string name="missingX">Vf = Vo + at</string>

    <string name="calculateButton">Calculator</string>

</resources>
