<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Kinematics_Solver">

    <TextView android:text="@string/kinematics_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="10sp"
        android:paddingBottom="30sp"
        android:textSize="34sp"
        android:textStyle="bold"
        android:id="@+id/kinematics_header" />

    <TextView android:text="@string/missingVf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kinematics_header"
        android:paddingTop="20sp"
        android:paddingBottom="30sp"
        android:paddingLeft="20sp"
        android:textSize="20sp"
        android:id="@+id/missingVf" />

    <TextView android:text="@string/missingA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/missingVf"
        android:paddingTop="20sp"
        android:paddingBottom="30sp"
        android:paddingLeft="20sp"
        android:textSize="20sp"
        android:id="@+id/missingA" />

    <TextView android:text="@string/missingT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/missingA"
        android:paddingTop="20sp"
        android:paddingBottom="30sp"
        android:paddingLeft="20sp"
        android:textSize="20sp"
        android:id="@+id/missingT" />

    <TextView android:text="@string/missingX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/missingT"
        android:paddingTop="20sp"
        android:paddingBottom="30sp"
        android:paddingLeft="20sp"
        android:textSize="20sp"
        android:id="@+id/missingX" />

    <Button
        android:layout_width="300sp"
        android:layout_height="100sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/missingX"
        android:layout_marginBottom="20sp"
        android:text="@string/calculateButton"
        android:textSize="30sp"
        android:id="@+id/calculateButton" />




</RelativeLayout>
